# phlop

./: .clang-format  .gitignore  .pylintrc  .sublime-project  ISSUES.md  MANIFEST.in  README.md  mkn.pfm.yaml  mkn.yaml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build_nix.yml  build_osx.yml.off  build_win.yml.off  merge_master.yaml  pythonpublish-linux.yml  pythonpublish-osx.yml.off
inc/phlop/timing/: common_threaded_timer.hpp  common_timer.hpp  mpi_scope_timer.hpp  scope_timer.hpp  threaded_scope_timer.hpp
phlop/: __main__.py  dict.py  logger.py  os.py  proc.py  reflection.py  string.py  sys.py
phlop/app/: __init__.py  __main__.py  cmake.py  git.py  perf.py  sleep.py  stats_man.py  valgrind.py
phlop/app/nvidia/: __main__.py  csan.py  ncu.py
phlop/app/pfm/: __main__.py  check_events.py  showevtinfo.py
phlop/procs/: __main__.py  parallel_processor.py  runtimer.py
phlop/run/: __main__.py  mpirun_perf.py  mpirun_stats_man.py  perf.py  stats_man.py  test_cases.py  valgrind.py
phlop/testing/: __main__.py  parallel_processor.py  test_cases.py
phlop/timing/: scope_timer.py
sh/: clean.sh  lint.sh  pythonpath.sh  setup_pfm.sh  test.sh  wheel.sh
src/phlop/timing/: common_threaded_timer.cpp  scope_timer.cpp  threaded_scope_timer.cpp
tests/: all_concurrent.py
tests/_phlop/: empty_test.py  os_test.py
tests/_phlop/app/: git_test.py
tests/_phlop/run/: test_test_cases.py
tests/phlop/: os_test.py
tests/timing/: stress_scope_timer.cpp  test_mpi_scope_timer.cpp  test_scope_timer.cpp  test_scope_timer.py  test_threaded_scope_timer.cpp
(+3 files in other folders)
