[project]
name = "phlop"
version = "0.0.14"

dependencies = [

]

description = "stuff and things"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/PhilipDeegan/phlop/"
"Bug Tracker" = "https://github.com/PhilipDeegan/phlop/issues"

[build-system]
requires = [
    "setuptools>=42", "wheel", "packaging", "dill"
]

